# rick_and_morty_api

./: pyproject.toml
